# lipe-find-parser

./: .gitignore  Cargo.toml  man.roff
.github/workflows/: deploy.yml  test.yml
examples/: parse-find.rs
src/: ast.rs  find.rs  lib.rs  main.rs  permission_flags.rs  scheme.rs
src/find_chumsky/: mod.rs
src/find_parser/: error.rs  filetype.rs  format.rs  mod.rs  permission.rs  precedence.rs  prelude.rs  size.rs  timespec.rs
src/nom_find/: mod.rs
src/scheme/: error.rs  manager.rs  mod.rs  target_scheme.rs
src/snapshots/: lipe_find_parser__find_compilation__compile_permission_check_basic_any.snap  lipe_find_parser__find_compilation__compile_permission_check_symbolic_at_least_user_plus.snap.new  lipe_find_parser__find_compilation__compile_permission_check_symbolic_equal_all_minus.snap  lipe_find_parser__find_compilation__compile_permission_check_symbolic_equal_user_plus.snap.new  lipe_find_parser__find_compilation__fprint.snap  lipe_find_parser__find_compilation__fprintf.snap  lipe_find_parser__find_compilation__permission_check_basic_equal.snap  lipe_find_parser__find_compilation__permission_check_symbolic_at_least_user_plus.snap  lipe_find_parser__find_compilation__permission_check_symbolic_equal_all_equal.snap  lipe_find_parser__find_compilation__permission_check_symbolic_equal_all_plus.snap  lipe_find_parser__find_compilation__permission_check_symbolic_equal_group_plus.snap  lipe_find_parser__find_compilation__permission_check_symbolic_equal_user_equal.snap  (+5 more)
website/: Cargo.toml  build.rs  index.html  index.scss
website/src/: main.rs
(+2 files in other folders)
