[package]
name = "find-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
log = "0.4.21"
nom = "7.1.3"
nom-recursive = "0.5.0"
nom_locate = "4.2.0"
simple_logger = "4.3.3"
