[package]
name = "lipe-find-parser"
version = "0.1.0"
edition = "2021"
authors = ["JB <jb.skutnik@gmail.com>"]

[dependencies]
bitflags = "2.5.0"
instant = { version = "0.1.12", features = ["web-sys", "now", "wasm-bindgen"] }
log = "0.4.21"
winnow = "0.6.5"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }
simple_logger = "5.0.0"
